--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <!-- custom css -->
      <link rel="stylesheet" href="./styles/styles.css">
 </head>
-<body>
-    <main>
+<body class="font-poppins">
+    <main class="bg-[#010313] text-white min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center">
         <!-- home section start here -->
-        <section class="home">
-            
+        <section class="home min-h-screen flex justify-center items-center">
+            <div class="flex flex-col  items-center gap-10">
+                <h1 class="text-8xl font-anton uppercase">Alphabetic clash pro</h1>
+                <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+                <button class="btn text-pink-800 bg-white">Play Now</button>
+            </div>
         </section>
         <!-- home section end here -->
 
