--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     >
       <!-- home section start here -->
       <section
-        class="home min-h-screen flex justify-center items-center hidden"
+        class="home min-h-screen flex justify-center items-center "
       >
         <div class="flex flex-col items-center gap-10">
           <h1 class="text-8xl font-anton uppercase">Alphabetic clash</h1>
           <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-          <button class="btn text-pink-800 bg-white">Play Now</button>
+          <button onclick="play()" class="btn text-pink-800 bg-white">Play Now</button>
         </div>
       </section>
       <!-- home section end here -->
 
       <!-- play ground section start here -->
-      <section class="play-ground flex flex-col gap-20  items-center min-h-screen pt-20">
+      <section class="play-ground flex flex-col gap-20  items-center min-h-screen pt-20 hidden">
         <!-- screen start -->
         <div
           class="artboard artboard-horizontal phone-6 border-[20px] border-[#010313CC] bg-[#FFFFFFB3] rounded-2xl"
@@ -48,39 +48,39 @@
         <!-- screen end -->
 
         <!-- keyboard start -->
-        <div>
+        <div class="">
           <div class="my-1 flex w-full justify-center gap-1">
-            <kbd class="kbd">q</kbd>
-            <kbd class="kbd">w</kbd>
-            <kbd class="kbd">e</kbd>
-            <kbd class="kbd">r</kbd>
-            <kbd class="kbd">t</kbd>
-            <kbd class="kbd">y</kbd>
-            <kbd class="kbd">u</kbd>
-            <kbd class="kbd">i</kbd>
-            <kbd class="kbd">o</kbd>
-            <kbd class="kbd">p</kbd>
+            <kbd class="kbd bg-white text-black">q</kbd>
+            <kbd class="kbd bg-white text-black">w</kbd>
+            <kbd class="kbd bg-white text-black">e</kbd>
+            <kbd class="kbd bg-white text-black">r</kbd>
+            <kbd class="kbd bg-white text-black">t</kbd>
+            <kbd class="kbd bg-[#FFA500] text-black">y</kbd>
+            <kbd class="kbd bg-white text-black">u</kbd>
+            <kbd class="kbd bg-white text-black">i</kbd>
+            <kbd class="kbd bg-white text-black">o</kbd>
+            <kbd class="kbd bg-white text-black">p</kbd>
           </div>
           <div class="my-1 flex w-full justify-center gap-1">
-            <kbd class="kbd">a</kbd>
-            <kbd class="kbd">s</kbd>
-            <kbd class="kbd">d</kbd>
-            <kbd class="kbd">f</kbd>
-            <kbd class="kbd">g</kbd>
-            <kbd class="kbd">h</kbd>
-            <kbd class="kbd">j</kbd>
-            <kbd class="kbd">k</kbd>
-            <kbd class="kbd">l</kbd>
+            <kbd class="kbd bg-white text-black">a</kbd>
+            <kbd class="kbd bg-white text-black">s</kbd>
+            <kbd class="kbd bg-white text-black">d</kbd>
+            <kbd class="kbd bg-white text-black">f</kbd>
+            <kbd class="kbd bg-white text-black">g</kbd>
+            <kbd class="kbd bg-white text-black">h</kbd>
+            <kbd class="kbd bg-white text-black">j</kbd>
+            <kbd class="kbd bg-white text-black">k</kbd>
+            <kbd class="kbd bg-white text-black">l</kbd>
           </div>
           <div class="my-1 flex w-full justify-center gap-1">
-            <kbd class="kbd">z</kbd>
-            <kbd class="kbd">x</kbd>
-            <kbd class="kbd">c</kbd>
-            <kbd class="kbd">v</kbd>
-            <kbd class="kbd">b</kbd>
-            <kbd class="kbd">n</kbd>
-            <kbd class="kbd">m</kbd>
-            <kbd class="kbd">/</kbd>
+            <kbd class="kbd bg-white text-black">z</kbd>
+            <kbd class="kbd bg-white text-black">x</kbd>
+            <kbd class="kbd bg-white text-black">c</kbd>
+            <kbd class="kbd bg-white text-black">v</kbd>
+            <kbd class="kbd bg-white text-black">b</kbd>
+            <kbd class="kbd bg-white text-black">n</kbd>
+            <kbd class="kbd bg-white text-black">m</kbd>
+            <kbd class="kbd bg-white text-black">/</kbd>
           </div>
         </div>
         <!-- keyboard end -->
@@ -102,8 +102,18 @@
       <!-- play ground section end here -->
 
       <!-- score section start here -->
-      <section class="score"></section>
+      <section class="score flex justify-center items-center min-h-screen hidden">
+        <div class="space-y-6 text-center bg-[#FFFFFF33] rounded-lg p-6">
+            <h1 class="text-6xl">
+                <span>Score:</span>
+                <span>14</span>
+            </h1>
+            <button class="btn bg-white text-orange-600 border-none">Play Again</button>
+            <p>Practice will make you pro</p>
+        </div>
+      </section>
       <!-- score section end here -->
     </main>
+    <script src="./javascript/alpha.js"></script>
   </body>
 </html>
