set randomly alphabet background color

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </p>
           </div>
           <div class="flex justify-center items-center h-3/4">
-            <p class="text-black font-semibold text-8xl">Y</p>
+            <p id="current-alphabet" class="text-black font-semibold text-8xl uppercase">Y</p>
           </div>
         </div>
         <!-- screen end -->
@@ -55,37 +55,37 @@
         <!-- keyboard start -->
         <div class="">
           <div class="my-1 flex w-full justify-center gap-1">
-            <kbd class="kbd bg-white text-black">q</kbd>
-            <kbd class="kbd bg-white text-black">w</kbd>
-            <kbd class="kbd bg-white text-black">e</kbd>
-            <kbd class="kbd bg-white text-black">r</kbd>
-            <kbd class="kbd bg-white text-black">t</kbd>
-            <kbd class="kbd bg-[#FFA500] text-black">y</kbd>
-            <kbd class="kbd bg-white text-black">u</kbd>
-            <kbd class="kbd bg-white text-black">i</kbd>
-            <kbd class="kbd bg-white text-black">o</kbd>
-            <kbd class="kbd bg-white text-black">p</kbd>
+            <kbd id="q" class="kbd bg-white text-black">q</kbd>
+            <kbd id="w" class="kbd bg-white text-black">w</kbd>
+            <kbd id="e" class="kbd bg-white text-black">e</kbd>
+            <kbd id="r" class="kbd bg-white text-black">r</kbd>
+            <kbd id="t" class="kbd bg-white text-black">t</kbd>
+            <kbd id="y" class="kbd bg-white text-black">y</kbd>
+            <kbd id="u" class="kbd bg-white text-black">u</kbd>
+            <kbd id="i" class="kbd bg-white text-black">i</kbd>
+            <kbd id="o" class="kbd bg-white text-black">o</kbd>
+            <kbd id="p" class="kbd bg-white text-black">p</kbd>
           </div>
           <div class="my-1 flex w-full justify-center gap-1">
-            <kbd class="kbd bg-white text-black">a</kbd>
-            <kbd class="kbd bg-white text-black">s</kbd>
-            <kbd class="kbd bg-white text-black">d</kbd>
-            <kbd class="kbd bg-white text-black">f</kbd>
-            <kbd class="kbd bg-white text-black">g</kbd>
-            <kbd class="kbd bg-white text-black">h</kbd>
-            <kbd class="kbd bg-white text-black">j</kbd>
-            <kbd class="kbd bg-white text-black">k</kbd>
-            <kbd class="kbd bg-white text-black">l</kbd>
+            <kbd id="a" class="kbd bg-white text-black">a</kbd>
+            <kbd id="s" class="kbd bg-white text-black">s</kbd>
+            <kbd id="d" class="kbd bg-white text-black">d</kbd>
+            <kbd id="f" class="kbd bg-white text-black">f</kbd>
+            <kbd id="g" class="kbd bg-white text-black">g</kbd>
+            <kbd id="h" class="kbd bg-white text-black">h</kbd>
+            <kbd id="j" class="kbd bg-white text-black">j</kbd>
+            <kbd id="k" class="kbd bg-white text-black">k</kbd>
+            <kbd id="l" class="kbd bg-white text-black">l</kbd>
           </div>
           <div class="my-1 flex w-full justify-center gap-1">
-            <kbd class="kbd bg-white text-black">z</kbd>
-            <kbd class="kbd bg-white text-black">x</kbd>
-            <kbd class="kbd bg-white text-black">c</kbd>
-            <kbd class="kbd bg-white text-black">v</kbd>
-            <kbd class="kbd bg-white text-black">b</kbd>
-            <kbd class="kbd bg-white text-black">n</kbd>
-            <kbd class="kbd bg-white text-black">m</kbd>
-            <kbd class="kbd bg-white text-black">/</kbd>
+            <kbd id="z" class="kbd bg-white text-black">z</kbd>
+            <kbd id="x" class="kbd bg-white text-black">x</kbd>
+            <kbd id="c" class="kbd bg-white text-black">c</kbd>
+            <kbd id="v" class="kbd bg-white text-black">v</kbd>
+            <kbd id="b" class="kbd bg-white text-black">b</kbd>
+            <kbd id="n" class="kbd bg-white text-black">n</kbd>
+            <kbd id="m" class="kbd bg-white text-black">m</kbd>
+            <kbd id="/" class="kbd bg-white text-black">/</kbd>
           </div>
         </div>
         <!-- keyboard end -->
