added life and score reset

--- a/index.html
+++ b/index.html
@@ -113,11 +113,12 @@
        id="score" class=" flex justify-center items-center min-h-screen hidden"
       >
         <div class="space-y-6 text-center bg-[#FFFFFF33] rounded-lg p-6">
+          <h4 class="text4xl">Game over!</h4>
           <h1 class="text-6xl">
             <span>Score:</span>
             <span>14</span>
           </h1>
-          <button class="btn bg-white text-orange-600 border-none">
+          <button onclick="play()" class="btn bg-white text-orange-600 border-none">
             Play Again
           </button>
           <p>Practice will make you pro</p>
