added stop game and final score display

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       >
         <!-- screen start -->
         <div
-          class="w-250px md:artboard md:artboard-horizontal md:phone-6 border-[20px] border-[#010313CC] bg-[#FFFFFFB3] rounded-2xl"
+          class="artboard artboard-horizontal phone-6 border-[20px] border-[#010313CC] bg-[#FFFFFFB3] rounded-2xl"
         >
           <div class="flex justify-center">
             <p class="bg-[#2F2941] md:px-6 px-4 pb-2 md:pb-4 rounded-b-xl md:text-2xl">
@@ -116,7 +116,7 @@
           <h4 class="text4xl">Game over!</h4>
           <h1 class="text-6xl">
             <span>Score:</span>
-            <span>14</span>
+            <span id="last-score">14</span>
           </h1>
           <button onclick="play()" class="btn bg-white text-orange-600 border-none">
             Play Again
